# husky_manipulation

husky_dual_ur_moveit_config/: CMakeLists.txt  package.xml
husky_dual_ur_moveit_config/config/: husky.srdf  joint_limits.yaml  moveit_controllers.yaml
husky_ur_description/: CMakeLists.txt  package.xml
husky_ur_description/urdf/: husky_dual_ur5_e_description.urdf.xacro
