<?xml version="1.0"?>
<package format="2">
  <name>husky_ur_description</name>
  <version>0.0.0</version>
  <description>The husky_ur_description package</description>

  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ur_description</depend>
  <depend>husky_description</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
